crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c FROM prt1 t1, prt2 t2 WHERE t1.a = t2.b AND t1.b = 0 ORDER BY t1.a, t2.b;"
---
SelectStmt@0..103
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  RangeVar@35..42
    Ident@35..39 "prt1"
    Whitespace@39..40 " "
    Alias@40..42
      Ident@40..42 "t1"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  RangeVar@44..51
    Ident@44..48 "prt2"
    Whitespace@48..49 " "
    Alias@49..51
      Ident@49..51 "t2"
  Whitespace@51..52 " "
  Where@52..57 "WHERE"
  Whitespace@57..58 " "
  BoolExpr@58..82
    AExpr@58..69
      ColumnRef@58..62
        Ident@58..60 "t1"
        Ascii46@60..61 "."
        Ident@61..62 "a"
      Whitespace@62..63 " "
      Ascii61@63..64 "="
      Whitespace@64..65 " "
      ColumnRef@65..69
        Ident@65..67 "t2"
        Ascii46@67..68 "."
        Ident@68..69 "b"
    Whitespace@69..70 " "
    And@70..73 "AND"
    Whitespace@73..74 " "
    AExpr@74..82
      ColumnRef@74..78
        Ident@74..76 "t1"
        Ascii46@76..77 "."
        Ident@77..78 "b"
      Whitespace@78..79 " "
      Ascii61@79..80 "="
      Whitespace@80..81 " "
      AConst@81..82
        Iconst@81..82 "0"
  Whitespace@82..83 " "
  SortBy@83..96
    Order@83..88 "ORDER"
    Whitespace@88..89 " "
    By@89..91 "BY"
    Whitespace@91..92 " "
    ColumnRef@92..96
      Ident@92..94 "t1"
      Ascii46@94..95 "."
      Ident@95..96 "a"
  Ascii44@96..97 ","
  Whitespace@97..98 " "
  SortBy@98..102
    ColumnRef@98..102
      Ident@98..100 "t2"
      Ascii46@100..101 "."
      Ident@101..102 "b"
  Ascii59@102..103 ";"

