crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@213.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE prt4_n (a int, b int, c text) PARTITION BY RANGE(a);"
---
CreateStmt@0..65
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "prt4_n"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  ColumnDef@21..26
    Ident@21..22 "a"
    Whitespace@22..23 " "
    TypeName@23..26
      IntP@23..26 "int"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  ColumnDef@28..33
    Ident@28..29 "b"
    Whitespace@29..30 " "
    TypeName@30..33
      IntP@30..33 "int"
  Ascii44@33..34 ","
  Whitespace@34..35 " "
  ColumnDef@35..41
    Ident@35..36 "c"
    Whitespace@36..37 " "
    TypeName@37..41
      TextP@37..41 "text"
  Ascii41@41..42 ")"
  Whitespace@42..43 " "
  PartitionSpec@43..63
    Partition@43..52 "PARTITION"
    Whitespace@52..53 " "
    By@53..55 "BY"
    Whitespace@55..56 " "
    Range@56..61 "RANGE"
    Ascii40@61..62 "("
    PartitionElem@62..63
      Ident@62..63 "a"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

