crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@236.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into prtx1 select 1 + i%30, i, i\n  from generate_series(1,1000) i;"
---
InsertStmt@0..73
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "prtx1"
  Whitespace@17..18 " "
  SelectStmt@18..72
    Select@18..24 "select"
    Whitespace@24..25 " "
    ResTarget@25..33
      AExpr@25..33
        AConst@25..26
          Iconst@25..26 "1"
        Whitespace@26..27 " "
        Ascii43@27..28 "+"
        Whitespace@28..29 " "
        AExpr@29..33
          ColumnRef@29..30
            Ident@29..30 "i"
          Ascii37@30..31 "%"
          AConst@31..33
            Iconst@31..33 "30"
    Ascii44@33..34 ","
    Whitespace@34..35 " "
    ResTarget@35..36
      ColumnRef@35..36
        Ident@35..36 "i"
    Ascii44@36..37 ","
    Whitespace@37..38 " "
    ResTarget@38..39
      ColumnRef@38..39
        Ident@38..39 "i"
    Newline@39..40 "\n"
    Whitespace@40..42 "  "
    From@42..46 "from"
    Whitespace@46..47 " "
    RangeFunction@47..72
      List@47..69
        FuncCall@47..69
          Ident@47..62 "generate_series"
          Ascii40@62..63 "("
          AConst@63..64
            Iconst@63..64 "1"
          Ascii44@64..65 ","
          AConst@65..69
            Iconst@65..69 "1000"
      Ascii41@69..70 ")"
      Whitespace@70..71 " "
      Alias@71..72
        Ident@71..72 "i"
  Ascii59@72..73 ";"

